Falta seccion servicios

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,7 +10,7 @@ const {
     accion_whatsapp
     } = Astro.props;
 ---
-<div class="card-servicio w-full">
+<div class="card-servicio w-full mt-5">
     <div>
         <img src={imagen} alt="">
     </div>
