--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,28 +47,30 @@ import { Icon } from 'astro-iconify'
 				<button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
 				<button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
 			</div>
-			<button type="button" class="absolute btn_carousel top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
-				<span class="inline-flex btn_prev items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-					<svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
-					</svg>
-					<span class="sr-only">Previous</span>
-				</span>
-			</button>
-			<button type="button" class="absolute btn_carousel top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
-				<span class="inline-flex btn_next items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-					<svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-					</svg>
-					<span class="sr-only">Next</span>
-				</span>
-			</button>
+			<div class="relative w-full">
+				<button type="button" class="absolute btn_carousel top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+					<span class="inline-flex btn_prev items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+						<svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+							<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+						</svg>
+						<span class="sr-only">Previous</span>
+					</span>
+				</button>
+				<button type="button" class="absolute btn_carousel top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+					<span class="inline-flex btn_next items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+						<svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+							<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+						</svg>
+						<span class="sr-only">Next</span>
+					</span>
+				</button>
+			</div>
 		</div>
 	</section>
 	<Servicios/>
 	<section>
-		<div class="bg-greensea-custom mt-20 relative px-5 py-10 h-[900px]">
-			<img class="absolute bottom-0 -left-12 w-[300px]" src="/img/esme.png" alt="">
+		<div class="bg-greensea-custom mt-20 relative px-4 py-10 h-[900px]">
+			<img class="absolute bottom-0 -left-12 w-[85%]" src="/img/esme.png" alt="">
 			<div class="w-full">
 				<div class="text-center mb-10">
 					<h2 class="text-3xl font-light text-greensea-custom2">Arte, ciencia y pasión</h2>
@@ -78,7 +80,7 @@ import { Icon } from 'astro-iconify'
 				<p class="text-center text-white mt-5 font-light">Mi misión es ayudarte a descubrir y realzar tu belleza única a través de técnicas personalizadas y un enfoque artístico. Creo que cada persona merece sentirse segura y hermosa en su propia piel, y es un honor para mí ser parte de ese viaje.</p>
 			</div>
 			<div class="w-full">
-				<div class="absolute right-5 bottom-5 z-10">
+				<div class="absolute right-0 bottom-0 z-10 box_no">
 					<div class="text-center border-greensea-custom2 mb-7">
 						<p class="text-7xl font-semibold text-greensea-custom2">+70</p>
 						<span class="text-greensea-custom2">clientas felices</span>
@@ -89,8 +91,8 @@ import { Icon } from 'astro-iconify'
 						<span class="text-greensea-custom2">certificaciones</span>
 					</div>
 					<div class="flex items-center justify-center gap-3">
-						<a href="https://www.facebook.com/esme.espinoza04" target="_blank"><Icon name="mdi:facebook" class="text-greensea-custom2 w-[40px]" /></a>
-						<a href="https://www.instagram.com/esmealca31/" target="_blank"><Icon name="mdi:instagram" class="text-greensea-custom2 w-[40px]" /></a>
+						<a href="https://www.facebook.com/esme.espinoza04" target="_blank"><Icon name="mdi:facebook" class="text-greensea-custom2 w-[40px] upper" /></a>
+						<a href="https://www.instagram.com/esmealca31/" target="_blank"><Icon name="mdi:instagram" class="text-greensea-custom2 w-[40px] upper" /></a>
 					</div>
 				</div>
 			</div>
@@ -103,13 +105,13 @@ import { Icon } from 'astro-iconify'
 					<img src="/img/slide1.webp" alt="" />
 				</li>
 				<li>
-					<img src="/img/slide2.jpg" alt="" />
+					<img src="/img/slide2.webp" alt="" />
 				</li>
 				<li>
-					<img src="/img/slide3.jpg" alt="" />
+					<img src="/img/slide3.webp" alt="" />
 				</li>
 				<li>
-					<img src="/img/slide4.jpeg" alt="" />
+					<img src="/img/slide4.webp" alt="" />
 				</li>
 				<li>
 					<img src="/img/slide5.webp" alt="" />
@@ -119,24 +121,24 @@ import { Icon } from 'astro-iconify'
 		<div class="text-center mt-10">
 			<h1 class="text-dark-custom text-4xl font-bold">¿Lista para tu transformación? </h1>
 			<p class="text-dark-custom font-light my-5">Contáctame por WhatsApp <br> y agendemos tu cita.</p>
-			<a class="btn-whatsapp" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita"><Icon name="ic:baseline-whatsapp" /> Contactar ahora</a>
+			<a class="btn-whatsapp upper" href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita"><Icon name="ic:baseline-whatsapp" /> Contactar ahora</a>
 		</div>
 		<div class="w-full inline-flex flex-nowrap overflow-hidden [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)] mt-10">
 			<ul class="flex items-center justify-center md:justify-start [&_li]:mx-2 [&_img]:max-w-none animate-marquee slide">
 				<li>
-					<img src="/img/slide1.webp" alt="" />
+					<img src="/img/slide6.webp" alt="" />
 				</li>
 				<li>
-					<img src="/img/slide2.jpg" alt="" />
+					<img src="/img/slide7.webp" alt="" />
 				</li>
 				<li>
-					<img src="/img/slide3.jpg" alt="" />
+					<img src="/img/slide8.webp" alt="" />
 				</li>
 				<li>
-					<img src="/img/slide4.jpeg" alt="" />
+					<img src="/img/slide9.webp" alt="" />
 				</li>
 				<li>
-					<img src="/img/slide5.webp" alt="" />
+					<img src="/img/slide10.webp" alt="" />
 				</li>
 			</ul>
 		</div>
@@ -149,46 +151,24 @@ import { Icon } from 'astro-iconify'
 		<div class="grid grid-cols-2 md:grid-cols-4 gap-4 px-5 gallery">
 			<div class="grid gap-4">
 				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image.jpg" alt="">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery1.webp" alt="">
 				</div>
 				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt="">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery2.webp" alt="">
 				</div>
 				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg" alt="">
-				</div>
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery3.webp" alt="">
+				</div>				
 			</div>
 			<div class="grid gap-4">
 				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg" alt="">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery4.webp" alt="">
 				</div>
 				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg" alt="">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery5.webp" alt="">
 				</div>
 				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg" alt="">
-				</div>
-			</div>
-			<div class="grid gap-4">
-				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg" alt="">
-				</div>
-				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg" alt="">
-				</div>
-				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-8.jpg" alt="">
-				</div>
-			</div>
-			<div class="grid gap-4">
-				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-9.jpg" alt="">
-				</div>
-				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-10.jpg" alt="">
-				</div>
-				<div>
-					<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-11.jpg" alt="">
+					<img class="h-auto max-w-full rounded-lg" src="/img/gallery6.webp" alt="">
 				</div>
 			</div>
 		</div>
@@ -198,8 +178,8 @@ import { Icon } from 'astro-iconify'
 		<div class="mx-auto w-full max-w-screen-xl">
 			<div class="px-4 py-6 text-center">
 				<div class="flex items-center justify-center mt-4 space-x-2">
-					<a href="https://www.facebook.com/esme.espinoza04"><Icon name="mdi:facebook" class="text-white w-[35px]" /></a>
-					<a href="https://www.instagram.com/esmealca31/"><Icon name="mdi:instagram" class="text-white w-[35px]" /></a>
+					<a href="https://www.facebook.com/esme.espinoza04"><Icon name="mdi:facebook" class="text-white w-[35px] upper" /></a>
+					<a href="https://www.instagram.com/esmealca31/"><Icon name="mdi:instagram" class="text-white w-[35px] upper" /></a>
 				</div>
 				<span class="text-[12px] text-white sm:text-center">© 2024 Esme Studio. Todos los derechos reservados.
 				</span>				
@@ -230,8 +210,14 @@ import { Icon } from 'astro-iconify'
 </Layout>
 
 <style>
+	.upper {
+		transition: all 0.2s ease-in-out;
+	}
+	.upper:hover {
+		transform: scale(1.1);
+	}
 	.icon-sm {
-		width: 22px;
+		width: 35px;
 	} 	
 	.btn-greensea {
 		border-radius: 9999px;
@@ -287,9 +273,6 @@ import { Icon } from 'astro-iconify'
 		object-fit: cover;
 		border-radius: 16px;
 	}
-	.hidden {
-		display: none;
-	}
 	#prevImage, #nextImage {
 		background: none;
 		border: none;
@@ -326,45 +309,51 @@ import { Icon } from 'astro-iconify'
 	.gallery img:hover {
 		transform: scale(1.05);
 	}
-	.btn_carousel {
-		width: 100%;
-	}
 	.btn_carousel .btn_prev {
 		position: absolute;
 		bottom: 20px;
-		right: 80px;
+		left: 65vw;
 	}
 	.btn_carousel .btn_next {
 		position: absolute;
 		bottom: 20px;
-		right: 20px;
+		right: 5vw;
 	}
 	.points_carousel {
 		bottom: 33px;
+		/* right: 10px; */
 	}
 	.points_carousel button.bg-white {
 		width: 30px;
 		transition: all 0.3s ease-in-out;
 	}
+	.box_no {
+		background-color: #ffffffab;
+		border-radius: 20px 0px 0px 0px;
+		padding: 10px;
+	}
 </style>
 
-<script>	
+<script is:inline>
 
 	document.addEventListener("DOMContentLoaded", () => {
 		const triggerElement = document.getElementById('trigger');
-		const elementToHide = document.getElementById('element-to-hide');
 
-		const observer = new IntersectionObserver((entries) => {
-			entries.forEach(entry => {
-			if (entry.isIntersecting) {
-				elementToHide.classList.add('hidden');
-			} else {
-				elementToHide.classList.remove('hidden');
-			}
+		if (triggerElement) {
+			const elementToHide = document.getElementById('element-to-hide');
+
+			const observer = new IntersectionObserver((entries) => {
+				entries.forEach(entry => {
+				if (entry.isIntersecting) {
+					elementToHide.classList.add('hidden');
+				} else {
+					elementToHide.classList.remove('hidden');
+				}
+				});
 			});
-		});
 
-		observer.observe(triggerElement);
+			observer.observe(triggerElement);
+		}
 	});
 
 	document.addEventListener('DOMContentLoaded', () => {
@@ -375,36 +364,38 @@ import { Icon } from 'astro-iconify'
 		const prevImage = document.getElementById('prevImage');
 		const nextImage = document.getElementById('nextImage');
 
-		let currentImageIndex = 0;
+		if (closeModal) {
+			let currentImageIndex = 0;
 
-		images.forEach((image, index) => {
-			image.addEventListener('click', () => {
-			currentImageIndex = index;
-			modalImage.src = images[currentImageIndex].src;
-			modal.style.display = 'flex';
+			images.forEach((image, index) => {
+				image.addEventListener('click', () => {
+				currentImageIndex = index;
+				modalImage.src = images[currentImageIndex].src;
+				modal.style.display = 'flex';
+				});
 			});
-		});
 
-		closeModal.addEventListener('click', () => {
-			modal.style.display = 'none';
-		});
+			closeModal.addEventListener('click', () => {
+				modal.style.display = 'none';
+			});
 
-		modal.addEventListener('click', (e) => {
-			if (e.target === modal) {
-			modal.style.display = 'none';
-			}
-		});
+			modal.addEventListener('click', (e) => {
+				if (e.target === modal) {
+				modal.style.display = 'none';
+				}
+			});
 
-		prevImage.addEventListener('click', (e) => {
-			e.stopPropagation();
-			currentImageIndex = (currentImageIndex - 1 + images.length) % images.length;
-			modalImage.src = images[currentImageIndex].src;
-		});
+			prevImage.addEventListener('click', (e) => {
+				e.stopPropagation();
+				currentImageIndex = (currentImageIndex - 1 + images.length) % images.length;
+				modalImage.src = images[currentImageIndex].src;
+			});
 
-		nextImage.addEventListener('click', (e) => {
-			e.stopPropagation();
-			currentImageIndex = (currentImageIndex + 1) % images.length;
-			modalImage.src = images[currentImageIndex].src;
-		});
+			nextImage.addEventListener('click', (e) => {
+				e.stopPropagation();
+				currentImageIndex = (currentImageIndex + 1) % images.length;
+				modalImage.src = images[currentImageIndex].src;
+			});	
+		}
 	});
 </script>
