--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,13 +9,13 @@ import '@fontsource-variable/lexend';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Ofrecemos tratamientos de belleza facial y corporal. Mejora tu apariencia con reducción de talla, nanoplastia y cuidados estéticos personalizados. Reserva tu sesión y luce radiante hoy mismo." />
+		<meta name="keywords" content="Reducción de talla, Nanoplastia capilar, Tratamientos de belleza corporal, Cuidado facial personalizado, Servicios estéticos no invasivos, Belleza corporal y facial, Tratamientos reductores, Mejorar la apariencia corporal, Cuidado de la piel, Tratamientos de rejuvenecimiento, Tratamientos estéticos, Piel radiante y saludable, Belleza sin cirugía, Reducción de medidas corporales, Nanoplastia sin formol.">
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<link rel="icon" type="image/svg+xml" href="/public/img/esme-logo.svg" />
 		<title>{title}</title>
 	</head>
 	<body>
