--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,3 +30,13 @@ import '@fontsource-variable/lexend';
 		scroll-behavior: smooth;
 	}
 </style>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3W6N035QCF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3W6N035QCF');
+</script>s
