--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import '@fontsource-variable/lexend';
 		<meta name="description" content="Ofrecemos tratamientos de belleza facial y corporal. Mejora tu apariencia con reducción de talla, nanoplastia y cuidados estéticos personalizados. Reserva tu sesión y luce radiante hoy mismo." />
 		<meta name="keywords" content="Reducción de talla, Nanoplastia capilar, Tratamientos de belleza corporal, Cuidado facial personalizado, Servicios estéticos no invasivos, Belleza corporal y facial, Tratamientos reductores, Mejorar la apariencia corporal, Cuidado de la piel, Tratamientos de rejuvenecimiento, Tratamientos estéticos, Piel radiante y saludable, Belleza sin cirugía, Reducción de medidas corporales, Nanoplastia sin formol.">
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/public/img/esme-logo.svg" />
+		<link rel="icon" type="image/svg+xml" href="/img/esme-logo.svg" />
 		<title>{title}</title>
 	</head>
 	<body>
@@ -31,7 +31,6 @@ import '@fontsource-variable/lexend';
 	}
 </style>
 
-<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3W6N035QCF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -39,4 +38,4 @@ import '@fontsource-variable/lexend';
   gtag('js', new Date());
 
   gtag('config', 'G-3W6N035QCF');
-</script>s
+</script>
